<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RegistrationPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/txt_title_registration_page"
                android:gravity="center_horizontal"
                android:textColor="@color/primary_text"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledFirstName"
                style="@style/InputFilledTheme"
                android:hint="@string/hnt_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/akshay"
                    android:textColor="@color/input_primary_text"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledLastName"
                style="@style/InputFilledTheme"
                android:hint="@string/hnt_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sangnai"
                    android:textColor="@color/input_primary_text"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledUsername"
                style="@style/InputFilledTheme"
                android:hint="@string/hnt_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/gmail"
                    android:textColor="@color/input_primary_text"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledPassword"
                style="@style/InputFilledTheme"
                android:hint="@string/hnt_Password"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@string/password"
                    android:textColor="@color/input_primary_text"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchBranch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/switch_txt_branch"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rBtnMale"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/btnR_male"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text"
                        android:checked="true"/>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rBtnFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/btnR_female"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text"/>

                </RadioGroup>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/primary_text"
                android:backgroundTintMode="add"
                android:backgroundTint="@color/colorPrimaryDark"
                android:dropDownWidth="match_parent"
                android:entries="@array/city_name"
                android:popupBackground="@color/secondary_text"
                android:popupTheme="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:layout_marginBottom="15dp"
                >
            </Spinner>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_status"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>